clusters/hl-sol-c1/apps/monitoring/ingress-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.k8s.kuipr.de`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.k8s.kuipr.de`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.k8s.kuipr.de`)
      kind: Rule
      services:
        - name: grafana
          port: 80
  tls:
    certResolver: letsencrypt
