clusters/hl-sol-c1/apps/monitoring/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.k8s.kuipr.de`)
      kind: Rule
      services:
      - name: grafana
        port: 80
